🐛 fix: container collapsing, head injected font family

--- a/packages/wtqdocs/styles/base/_default.scss
+++ b/packages/wtqdocs/styles/base/_default.scss
@@ -16,15 +16,6 @@ $font-lg: 1.728rem;
 $font-md: 1.44rem;
 $font-sm: 1.2rem;
 $font-xs: 1rem;
-$pass: false !default;
-$font-face: "" !default;
-
-@font-face {
-  font-family: Geist;
-  font-weight: 100 900;
-  font-display: swap;
-  src: url($font-face) format("woff2");
-}
 
 :root {
   --font-lg: #{$font-lg};
@@ -102,12 +93,12 @@ html {
 
 body {
   height: 100%;
+  width: 100%;
   scroll-behavior: smooth;
-
   overflow-x: hidden;
   margin: 0;
 
-  font-family: Geist, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+  font-family: wtqfont, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: hsl(var(--darkest));
 
@@ -119,10 +110,6 @@ hr {
   color: inherit;
   border: 1px solid hsl(var(--light));
 }
-
-ul, ol {
-  padding: 0;
-} 
 
 code, kbd, samp, pre {
   direction: ltr;
@@ -247,55 +234,55 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 // type scaling based on 1.333 – Perfect Fourth
-.h1, h1 {
+h1 {
   margin-block: 3rem 0.5rem;
   font-size: 2.986rem;
   line-height: 1.1;
 }
 
-.h2, h2 {
+h2 {
   margin-block: 1.5rem 0.5rem;
   font-size: 2.488rem;
   line-height: 1.25;
 }
 
-.h3, h3 {
+h3 {
   margin-block: 1rem 0.5rem;
   font-size: 2.074rem;
   line-height: 1.3;
 }
 
-.h4, h4 {
+h4 {
   margin-block: 2rem 1rem;
   font-size: 1.728rem;
   line-height: 1.4;
 }
 
-.h5, h5 {
+h5 {
   margin-block: 1rem;
   font-size: 1.44rem;
   line-height: 1.5;
 }
 
-.h6, h6 {
+h6 {
   margin-block: 1rem;
   font-size: 1.2rem;
   line-height: 1.2;
 }
 
-.h1, h1, .h2, h2 {
+h1, h2 {
   font-weight: 800;
 }
 
-.h3, h3, .h4, h4 {
+h3, h4 {
   font-weight: 700;
 }
 
-.h5, h5, .h6, h6 {
+h5, h6 {
   font-weight: 600;
 }
 
-.p, p {
+p {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.3;
